@@ -70,6 +70,7 @@ TODO_CODECS_BASIC_TABLE+=inter/WHITESPACE-DERAIL
 TODO_CODECS_BASIC_TABLE+=inter/WHITESPACE-RERAIL
 TODO_CODECS_BASIC_TABLE+=inter/WIDTH
 TODO_CODECS_BASIC_TABLE+=inter/WIN
+TODO_CODECS_BASIC_TABLE+=inter/ZH-STRINGS
 TODO_CODECS_BASIC_TABLE+=inter/ZHCN
 TODO_CODECS_BASIC_TABLE+=inter/ZHTW
 TODO_CODECS_BASIC_TABLE+=inter/ZHTW_WORDS
@@ -164,6 +165,7 @@ TODO_CODECS_BASIC_CALLBACK+=inter/TRIM-WIDTH
 TODO_CODECS_BASIC_CALLBACK+=inter/WHITESPACE-DERAIL
 TODO_CODECS_BASIC_CALLBACK+=inter/WHITESPACE-RERAIL
 TODO_CODECS_BASIC_CALLBACK+=inter/WIDTH
+TODO_CODECS_BASIC_CALLBACK+=inter/ZH-STRINGS
 TODO_CODECS_BASIC_CALLBACK+=to/3F
 TODO_CODECS_BASIC_CALLBACK+=to/ANSI-CONTROL
 TODO_CODECS_BASIC_CALLBACK+=to/ASCII-ESCAPED-UNICODE
